--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -108,7 +108,6 @@ allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:7826::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -712,54 +711,6 @@ allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
-allow 2a10:1fc0:10::19eb:717b;
-allow 2a10:1fc0:10::28fc:90d4;
-allow 2a10:1fc0:10::2a17:5b54;
-allow 2a10:1fc0:10::2cf4:6ba2;
-allow 2a10:1fc0:10::2d91:1a2d;
-allow 2a10:1fc0:10::3903:457;
-allow 2a10:1fc0:10::3919:de17;
-allow 2a10:1fc0:10::3a1:5e9f;
-allow 2a10:1fc0:10::3dc5:e694;
-allow 2a10:1fc0:10::3eb3:d1d0;
-allow 2a10:1fc0:10::3ec1:2b1e;
-allow 2a10:1fc0:10::40d8:83c;
-allow 2a10:1fc0:10::42d2:f78b;
-allow 2a10:1fc0:10::5138:4dfa;
-allow 2a10:1fc0:10::5719:261d;
-allow 2a10:1fc0:10::61d9:7617;
-allow 2a10:1fc0:10::61e2:c84d;
-allow 2a10:1fc0:10::627f:3c31;
-allow 2a10:1fc0:10::694a:c359;
-allow 2a10:1fc0:10::6b4c:30fc;
-allow 2a10:1fc0:10::6c2e:469a;
-allow 2a10:1fc0:10::6d92:d6ab;
-allow 2a10:1fc0:10::6fde:4b8d;
-allow 2a10:1fc0:10::792f:38b4;
-allow 2a10:1fc0:10::895d:abf9;
-allow 2a10:1fc0:10::8a03:d023;
-allow 2a10:1fc0:10::8b78:d42e;
-allow 2a10:1fc0:10::8d4d:eca2;
-allow 2a10:1fc0:10::9a73:d4f2;
-allow 2a10:1fc0:10::9d80:c9f7;
-allow 2a10:1fc0:10::9e08:e765;
-allow 2a10:1fc0:10::a3a5:49da;
-allow 2a10:1fc0:10::a458:8b37;
-allow 2a10:1fc0:10::a63c:724c;
-allow 2a10:1fc0:10::b571:1205;
-allow 2a10:1fc0:10::bf3f:d195;
-allow 2a10:1fc0:10::c129:61a1;
-allow 2a10:1fc0:10::c385:c7fa;
-allow 2a10:1fc0:10::c7c7:2f84;
-allow 2a10:1fc0:10::d5a6:a292;
-allow 2a10:1fc0:10::d5d0:db30;
-allow 2a10:1fc0:10::d6b7:b3e9;
-allow 2a10:1fc0:10::dbe0:6173;
-allow 2a10:1fc0:10::dbe9:7852;
-allow 2a10:1fc0:10::e4c8:9020;
-allow 2a10:1fc0:10::ea87:5496;
-allow 2a10:1fc0:10::fa6c:cac5;
-allow 2a10:1fc0:10::fdb0:ba7f;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:1467::;
@@ -821,6 +772,7 @@ allow 2a12:a800:2:1:45:80:158:69;
 allow 2a12:a800:8:1:45:94:31:68;
 allow 2a12:a800:9:1:193:26:115:212;
 allow 2a12:a800:9:1:193:26:115:43;
+allow 2a12:a800:9:1:193:26:115:61;
 allow 2a14:3f87:6920::126;
 allow 2a14:3f87:6920::5b;
 allow 2a14:3f87:f001:30::a;
