--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -103,7 +103,6 @@ deny 109.71.252.88;
 deny 109.71.252.97;
 deny 113.20.31.38;
 deny 114.35.245.150;
-deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
 deny 119.28.139.55;
@@ -596,6 +595,7 @@ deny 193.239.232.102;
 deny 193.26.115.212;
 deny 193.26.115.243;
 deny 193.26.115.43;
+deny 193.26.115.61;
 deny 193.32.162.104;
 deny 193.32.162.96;
 deny 193.36.132.21;
@@ -763,7 +763,6 @@ deny 2001:67c:e60:c0c:192:42:116:219;
 deny 2001:910:1400:107::2;
 deny 2001:ac8:22:43::20e5:a7d7;
 deny 2001:b011:4006:7826::b;
-deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1559,54 +1558,6 @@ deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
-deny 2a10:1fc0:10::19eb:717b;
-deny 2a10:1fc0:10::28fc:90d4;
-deny 2a10:1fc0:10::2a17:5b54;
-deny 2a10:1fc0:10::2cf4:6ba2;
-deny 2a10:1fc0:10::2d91:1a2d;
-deny 2a10:1fc0:10::3903:457;
-deny 2a10:1fc0:10::3919:de17;
-deny 2a10:1fc0:10::3a1:5e9f;
-deny 2a10:1fc0:10::3dc5:e694;
-deny 2a10:1fc0:10::3eb3:d1d0;
-deny 2a10:1fc0:10::3ec1:2b1e;
-deny 2a10:1fc0:10::40d8:83c;
-deny 2a10:1fc0:10::42d2:f78b;
-deny 2a10:1fc0:10::5138:4dfa;
-deny 2a10:1fc0:10::5719:261d;
-deny 2a10:1fc0:10::61d9:7617;
-deny 2a10:1fc0:10::61e2:c84d;
-deny 2a10:1fc0:10::627f:3c31;
-deny 2a10:1fc0:10::694a:c359;
-deny 2a10:1fc0:10::6b4c:30fc;
-deny 2a10:1fc0:10::6c2e:469a;
-deny 2a10:1fc0:10::6d92:d6ab;
-deny 2a10:1fc0:10::6fde:4b8d;
-deny 2a10:1fc0:10::792f:38b4;
-deny 2a10:1fc0:10::895d:abf9;
-deny 2a10:1fc0:10::8a03:d023;
-deny 2a10:1fc0:10::8b78:d42e;
-deny 2a10:1fc0:10::8d4d:eca2;
-deny 2a10:1fc0:10::9a73:d4f2;
-deny 2a10:1fc0:10::9d80:c9f7;
-deny 2a10:1fc0:10::9e08:e765;
-deny 2a10:1fc0:10::a3a5:49da;
-deny 2a10:1fc0:10::a458:8b37;
-deny 2a10:1fc0:10::a63c:724c;
-deny 2a10:1fc0:10::b571:1205;
-deny 2a10:1fc0:10::bf3f:d195;
-deny 2a10:1fc0:10::c129:61a1;
-deny 2a10:1fc0:10::c385:c7fa;
-deny 2a10:1fc0:10::c7c7:2f84;
-deny 2a10:1fc0:10::d5a6:a292;
-deny 2a10:1fc0:10::d5d0:db30;
-deny 2a10:1fc0:10::d6b7:b3e9;
-deny 2a10:1fc0:10::dbe0:6173;
-deny 2a10:1fc0:10::dbe9:7852;
-deny 2a10:1fc0:10::e4c8:9020;
-deny 2a10:1fc0:10::ea87:5496;
-deny 2a10:1fc0:10::fa6c:cac5;
-deny 2a10:1fc0:10::fdb0:ba7f;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:1467::;
@@ -1668,6 +1619,7 @@ deny 2a12:a800:2:1:45:80:158:69;
 deny 2a12:a800:8:1:45:94:31:68;
 deny 2a12:a800:9:1:193:26:115:212;
 deny 2a12:a800:9:1:193:26:115:43;
+deny 2a12:a800:9:1:193:26:115:61;
 deny 2a14:3f87:6920::126;
 deny 2a14:3f87:6920::5b;
 deny 2a14:3f87:f001:30::a;
@@ -1826,7 +1778,6 @@ deny 46.182.21.248;
 deny 46.23.109.25;
 deny 46.232.251.191;
 deny 46.234.47.105;
-deny 46.249.49.183;
 deny 46.250.243.29;
 deny 46.30.188.218;
 deny 46.38.243.210;
@@ -1930,30 +1881,6 @@ deny 84.19.182.20;
 deny 84.211.226.13;
 deny 84.239.46.144;
 deny 85.239.41.130;
-deny 85.239.55.11;
-deny 85.239.55.110;
-deny 85.239.55.112;
-deny 85.239.55.114;
-deny 85.239.55.123;
-deny 85.239.55.132;
-deny 85.239.55.168;
-deny 85.239.55.173;
-deny 85.239.55.174;
-deny 85.239.55.184;
-deny 85.239.55.189;
-deny 85.239.55.192;
-deny 85.239.55.201;
-deny 85.239.55.228;
-deny 85.239.55.230;
-deny 85.239.55.239;
-deny 85.239.55.24;
-deny 85.239.55.249;
-deny 85.239.55.25;
-deny 85.239.55.250;
-deny 85.239.55.31;
-deny 85.239.55.37;
-deny 85.239.55.51;
-deny 85.239.55.80;
 deny 85.93.218.204;
 deny 86.54.28.49;
 deny 87.118.110.27;
@@ -1995,30 +1922,6 @@ deny 91.208.75.3;
 deny 91.208.75.4;
 deny 91.219.236.101;
 deny 91.219.236.91;
-deny 91.227.77.107;
-deny 91.227.77.108;
-deny 91.227.77.119;
-deny 91.227.77.125;
-deny 91.227.77.139;
-deny 91.227.77.158;
-deny 91.227.77.160;
-deny 91.227.77.181;
-deny 91.227.77.193;
-deny 91.227.77.200;
-deny 91.227.77.208;
-deny 91.227.77.209;
-deny 91.227.77.226;
-deny 91.227.77.229;
-deny 91.227.77.237;
-deny 91.227.77.25;
-deny 91.227.77.31;
-deny 91.227.77.36;
-deny 91.227.77.44;
-deny 91.227.77.48;
-deny 91.227.77.51;
-deny 91.227.77.54;
-deny 91.227.77.62;
-deny 91.227.77.97;
 deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.243.24.163;
