--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -222,6 +222,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
+allow 179.35.7.217;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -234,7 +235,6 @@ allow 179.43.159.201;
 allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
-allow 179.73.186.62;
 allow 180.150.226.99;
 allow 185.100.85.132;
 allow 185.100.87.136;
@@ -477,6 +477,7 @@ allow 185.246.84.179;
 allow 185.247.184.105;
 allow 185.247.184.33;
 allow 185.247.226.175;
+allow 185.247.226.95;
 allow 185.252.232.218;
 allow 185.254.196.141;
 allow 185.34.33.2;
@@ -640,6 +641,7 @@ allow 198.98.48.33;
 allow 198.98.48.35;
 allow 198.98.50.199;
 allow 198.98.51.189;
+allow 198.98.51.249;
 allow 198.98.57.151;
 allow 198.98.57.74;
 allow 198.98.61.60;
@@ -903,7 +905,6 @@ allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
 allow 212.95.54.78;
-allow 213.218.212.80;
 allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
@@ -1002,6 +1003,7 @@ allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1362::2;
+allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
 allow 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1558,6 +1560,54 @@ allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
+allow 2a10:1fc0:10::19eb:717b;
+allow 2a10:1fc0:10::28fc:90d4;
+allow 2a10:1fc0:10::2a17:5b54;
+allow 2a10:1fc0:10::2cf4:6ba2;
+allow 2a10:1fc0:10::2d91:1a2d;
+allow 2a10:1fc0:10::3903:457;
+allow 2a10:1fc0:10::3919:de17;
+allow 2a10:1fc0:10::3a1:5e9f;
+allow 2a10:1fc0:10::3dc5:e694;
+allow 2a10:1fc0:10::3eb3:d1d0;
+allow 2a10:1fc0:10::3ec1:2b1e;
+allow 2a10:1fc0:10::40d8:83c;
+allow 2a10:1fc0:10::42d2:f78b;
+allow 2a10:1fc0:10::5138:4dfa;
+allow 2a10:1fc0:10::5719:261d;
+allow 2a10:1fc0:10::61d9:7617;
+allow 2a10:1fc0:10::61e2:c84d;
+allow 2a10:1fc0:10::627f:3c31;
+allow 2a10:1fc0:10::694a:c359;
+allow 2a10:1fc0:10::6b4c:30fc;
+allow 2a10:1fc0:10::6c2e:469a;
+allow 2a10:1fc0:10::6d92:d6ab;
+allow 2a10:1fc0:10::6fde:4b8d;
+allow 2a10:1fc0:10::792f:38b4;
+allow 2a10:1fc0:10::895d:abf9;
+allow 2a10:1fc0:10::8a03:d023;
+allow 2a10:1fc0:10::8b78:d42e;
+allow 2a10:1fc0:10::8d4d:eca2;
+allow 2a10:1fc0:10::9a73:d4f2;
+allow 2a10:1fc0:10::9d80:c9f7;
+allow 2a10:1fc0:10::9e08:e765;
+allow 2a10:1fc0:10::a3a5:49da;
+allow 2a10:1fc0:10::a458:8b37;
+allow 2a10:1fc0:10::a63c:724c;
+allow 2a10:1fc0:10::b571:1205;
+allow 2a10:1fc0:10::bf3f:d195;
+allow 2a10:1fc0:10::c129:61a1;
+allow 2a10:1fc0:10::c385:c7fa;
+allow 2a10:1fc0:10::c7c7:2f84;
+allow 2a10:1fc0:10::d5a6:a292;
+allow 2a10:1fc0:10::d5d0:db30;
+allow 2a10:1fc0:10::d6b7:b3e9;
+allow 2a10:1fc0:10::dbe0:6173;
+allow 2a10:1fc0:10::dbe9:7852;
+allow 2a10:1fc0:10::e4c8:9020;
+allow 2a10:1fc0:10::ea87:5496;
+allow 2a10:1fc0:10::fa6c:cac5;
+allow 2a10:1fc0:10::fdb0:ba7f;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:1467::;
@@ -1778,6 +1828,7 @@ allow 46.182.21.248;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
+allow 46.249.49.183;
 allow 46.250.243.29;
 allow 46.30.188.218;
 allow 46.38.243.210;
@@ -1881,6 +1932,30 @@ allow 84.19.182.20;
 allow 84.211.226.13;
 allow 84.239.46.144;
 allow 85.239.41.130;
+allow 85.239.55.11;
+allow 85.239.55.110;
+allow 85.239.55.112;
+allow 85.239.55.114;
+allow 85.239.55.123;
+allow 85.239.55.132;
+allow 85.239.55.168;
+allow 85.239.55.173;
+allow 85.239.55.174;
+allow 85.239.55.184;
+allow 85.239.55.189;
+allow 85.239.55.192;
+allow 85.239.55.201;
+allow 85.239.55.228;
+allow 85.239.55.230;
+allow 85.239.55.239;
+allow 85.239.55.24;
+allow 85.239.55.249;
+allow 85.239.55.25;
+allow 85.239.55.250;
+allow 85.239.55.31;
+allow 85.239.55.37;
+allow 85.239.55.51;
+allow 85.239.55.80;
 allow 85.93.218.204;
 allow 86.54.28.49;
 allow 87.118.110.27;
@@ -1894,6 +1969,7 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
@@ -1922,6 +1998,30 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.219.236.101;
 allow 91.219.236.91;
+allow 91.227.77.107;
+allow 91.227.77.108;
+allow 91.227.77.119;
+allow 91.227.77.125;
+allow 91.227.77.139;
+allow 91.227.77.158;
+allow 91.227.77.160;
+allow 91.227.77.181;
+allow 91.227.77.193;
+allow 91.227.77.200;
+allow 91.227.77.208;
+allow 91.227.77.209;
+allow 91.227.77.226;
+allow 91.227.77.229;
+allow 91.227.77.237;
+allow 91.227.77.25;
+allow 91.227.77.31;
+allow 91.227.77.36;
+allow 91.227.77.44;
+allow 91.227.77.48;
+allow 91.227.77.51;
+allow 91.227.77.54;
+allow 91.227.77.62;
+allow 91.227.77.97;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
