--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -116,6 +116,7 @@ set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
 set_real_ip_from 13.126.29.181;
+set_real_ip_from 131.72.79.38;
 set_real_ip_from 135.125.239.70;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
@@ -128,7 +129,6 @@ set_real_ip_from 142.44.133.81;
 set_real_ip_from 144.126.133.74;
 set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.59.231.4;
-set_real_ip_from 146.70.164.214;
 set_real_ip_from 147.45.116.145;
 set_real_ip_from 148.113.152.91;
 set_real_ip_from 149.102.153.38;
@@ -1174,6 +1174,7 @@ set_real_ip_from 2620:7:6001::ffff:c759:e659;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 27.255.75.198;
 set_real_ip_from 2800:ba0:6:c1::4858;
+set_real_ip_from 2803:cd80:2000:10::db8f:5f60;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
 set_real_ip_from 2a00:16b0:1:243::7012:e817;
