--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -331,6 +331,7 @@ set_real_ip_from 2620:7:6001::ffff:c759:e658;
 set_real_ip_from 2620:7:6001::ffff:c759:e659;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 2800:ba0:6:c1::4858;
+set_real_ip_from 2803:cd80:2000:10::db8f:5f60;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
 set_real_ip_from 2a00:16b0:1:243::7012:e817;
